force-app/main/default/objects/Session__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conference</label>
    <referenceTo>Conference__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>