force-app/main/default/objects/Session__c/fields/Session_Thesis__c.field-meta.xml
<CustomField>
    <fullName>Session_Thesis__c</fullName>
    <label>Session Thesis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>