force-app/main/default/objects/Session__c/fields/Topic_Technologies__c.field-meta.xml
<CustomField>
    <fullName>Topic_Technologies__c</fullName>
    <label>Topic Technologies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Topic_Technologies</valueSetName>
    </valueSet>
</CustomField>