force-app/main/default/objects/Session__c/validationRules/Start_After_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_After_End</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Start__c &gt;  Session_End__c</errorConditionFormula>
    <errorDisplayField>Session_Start__c</errorDisplayField>
    <errorMessage>Start of the session must be before the end.</errorMessage>
</ValidationRule>